name:                hademlia
version:             0.1.0.0
synopsis:            A Kademlia implementation
description:         Please see README.md
homepage:            https://github.com/semaj/hademlia
license:             BSD3
license-file:        LICENSE
author:              James Larisch
maintainer:          jameslarisch@protonmail.com
copyright:           2016 James Larisch
category:            Networks / DHT / Distributed Systems
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Node
                     , Connection
                     , Message
                     , Constants
                     , RoutingData
                     , Utils
                     , Real
                     , Sim
  build-depends:       base >= 4.7 && < 5
                     , network
                     , stm
                     , unordered-containers
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                     , OverloadedStrings

executable hademlia-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       hademlia
                     , base
  default-language:    Haskell2010


test-suite hademlia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hademlia
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/semaj/hademlia
